public/stylesheets/main.css
body {
  align: 0 auto;
  text-align: center;
  color: black;
  background-color: white;
  font-family: Verdana, Arial, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  color: black;
  text-align: center;
}

h4 {
  display: inline-block;
}

li {
  float: left;
  width: 16.66666%;
  background-color: orange;
  list-style: none;
  text-align: center;
  font-size: 1.5em;
  padding: .4em 0;
}

li:hover {
  background-color: grey;
}

a:link, a:visited {
  color: grey;
  text-decoration: none;
}

a.nav:link, a.nav:visited {
  color: white;
  text-decoration: none;
}

a:hover {
  color: orange;
}

.clearfix {
  overflow: auto;
}
#nav {
  background-color: orange;
  overflow: auto;
}
#session_box {
  float: right;
  text-align: right;
}
#main_pic {
  align: 0 auto;
  background-repeat: repeat;
  background-image: url(https://drscdn.500px.org/photo/57559144/m%3D2048/cc4997810dbb80e66665133c33206d11);
}
#main_pic_mask {
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.9);
}

.foot {
  background-color: orange;
  padding: 1em;
}

.button {
  font-size: 2em;
}

